libraries readme: JVM options